add MONGO_DB_NAME environment & change MONGO_URI

--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,5 @@
 
 
-MONGO_URI=mongodb://localhost:27017/mean-db
+MONGO_URI=mongodb://mongo:Ef441EdCGD5e---E-d4H4aDCe12bF1a-@roundhouse.proxy.rlwy.net:55443
+MONGO_DB_NAME=auth-db
 JWT_SEED=CYT3RFG@@FFRE23!sP43oeSDFxs
